static/css/styles.css
:root {
  --wrap-bg-color: #f8f8f8;
  --nav-bg-color: #41586c;
  --main-bg-color: #f8f8f8;
}

* {
  box-sizing: border-box;
  margin: 0;
  scroll-behavior: smooth;
}

body{
  font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.2;
  height: 100%;
  min-width: 350px;  
}

#wrapper{
  width: 100%;
  padding: 0;
  margin: 0;
  background-color: var(--wrap-bg-color);
}

.header-container {
  width: 100%;
}

.container img{
  width: 140px;
  height: 140px;
  margin: 5px;
}

.header-content {
  margin: 10px;
  display: flex;
  align-items: center;
}

.top-navigation {
  width: 100%;
  margin: 0;
  padding: 0;
  background-image: url("../images/northenlight.jpg");
  background-size: cover; 
  background-position: center; 
  background-repeat: no-repeat; 
  height: 150px; 
  display: flex; 
  align-items: center; 
  justify-content: center; 
  color: rgb(4, 56, 90); 
  font-size: 1.5rem;
} 
.top-navigation .container {
  display: flex;
  flex-flow: row wrap;
  background-color:transparent;
  width: 100%;
  justify-content:left;
  margin: 0;
} 
#small-menu {
  position: block;
  display: flex;
  align-items: center;
  justify-content: space-between;
  font-weight: lighter;
}

#menubar {
  position: absolute;
  right: 20px;
  background-color: transparent;
  border: 0;
  padding: 5px 0;
  margin: 0;
  z-index: 9999;
}
#menu-list {
  display: none;
  background-color: var(--nav-bg-color);
  width: 100%;
  margin: 0;
  padding: 0;
  z-index: 1000;
}
#menu-list.open {
  display: block;
  margin: 0;
}
#menu-list.open li{
  display: block;
  padding: 3px;
  text-align: center;
  margin-right: 0;
  letter-spacing: 0.1em;
  border-bottom: none;
  padding: 0;
  font-size: 18px;
}

#menu-list a {
  color: #ececec;
  font-weight: bold;
  text-decoration: none;
  display: inline-block;
  padding-top: 0.2em;
  padding-bottom: 0.2em;    
}
#menu-list a:hover {
  text-decoration: underline;
}

.main-content {
  padding: 0;   
  border-top: 1px solid #0f0c0d;
}

.main-content-border-control {
  border-top: none;
}

#big-menu {
  display: none;

}
#big-menu ul li a {
  color: #ececec;
  font-weight: bold;
}
#big-menu a:hover {
  text-decoration: underline;
}


header{      
  color: #333;
  display: inline-block;
  position: relative;
  padding: 0 1em;
  letter-spacing: 0.1em;
  font-weight: bold;
}

main {
  color: #111111;
  margin: 0 auto;
  padding: 1em 0.5em;
  background-color: var(--main-bg-color);
}

footer {
  bottom: 0;
  background-color: #41586c;
  color: #ffffff;
  font-size: 90%;
  text-align: center;
  padding: 0;
}

footer a{
  color: #FFFF00;
}
footer p{
  padding: 0;
  margin: 0;
  line-height: 150%;
}
/* input form styling */
form {
  display: grid;
  grid-template-columns: max-content 1fr;
  grid-gap: 1em;
  margin-bottom: 1em;
}
.field {
  grid-column: span 2;
  display: grid;
  grid: inherit;
  grid-template-columns: 8em 1fr;
  gap: 1em;
}
.field-button {
  grid-column: 1;
  display: grid;
  grid: inherit;
  grid-template-columns: 1fr;
  gap: 1em;
}

input {
  height: 2em;
  font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.2;
}
textarea {
  height: 10em;
  font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.2;
}
.date-input {
  max-width: fit-content;
}

input.readonly {
    background-color: #f0f0f0; 
    color: #666;            
    border: 1px solid #ccc;  
    cursor:auto;     
}

textarea.readonly {
  background-color: #f0f0f0; 
  color: #666;            
  border: 1px solid #ccc;  
  cursor: auto;     
  pointer-events: none;
}

.form_button {
  width: 80px;
  padding: 8px 15px;
  background-color: #007bff;
  border: none;
  color: #fff;
  cursor: pointer;
  border-radius: 3px;
  transition: background-color 0.3s ease;
}
.form_button:hover {
  background-color: #fd7e14;
}

.link_button {
  width: 80px;
  padding: 8px 15px;
  background-color: #007bff;
  border: none;
  color: #fff;
  cursor: pointer;
  border-radius: 3px;
  transition: background-color 0.3s ease;
}
.link_button:hover {
  background-color: #fd7e14;
}
.group-form a {
  color: #0c0c0c;
  text-decoration: none;
  display: inline-block;
  padding-top: 0.2em;
  padding-bottom: 0.2em;    
}
.group-form a:hover {
  text-decoration: underline;
}
.button-delete-confirm {
  width: 300px;
}
.menu-button {
  cursor: pointer;
}
/* form styling end */

/* Flash messages container */
.flashes {
  display: block;
  width: 80%;
  margin: auto auto 20px auto;
  pointer-events: none; /* Disable the hover effect */
}
.success {
  border: none;
}
.error {
  border: 2px solid #ff3860;
}
/* Flash message */
ul {
  list-style: none;
  padding: 0;
}
.flashes li {
  width: 100%;
  padding: 10px;
  margin-bottom: 10px;
  border-radius: 3px;
  color: #300505;
  background-color: #a7ac1b;
}

.flashes .date-error {
  color: red;
  background-color: yellow;
}
/* Table formatting */

.group-container {
  box-shadow: 0 0 10px rgb(0, 0, 0, 0.2);
}
.group-container table {
  width: 70%;
  height: 100%;
  border-collapse: collapse;
  /* margin-bottom: 20px; */
}

.group-container tbody {
  background-color: #fff;
  display: block;
}
.group-container tfoot {
  background-color: #fcfbeb;
  display: block;
  display: flex; /* Enable Flexbox */
  align-items: center; /* Vertically center content */
  justify-content: center; /* Horizontally center content (optional) */
  text-align: center; /* Fallback for centering text */
}

form table {
  width: 100%;
}

.group-form th, .group-form td {
  border: 0px;
  padding: 2px;
  text-align: center;
  /* height: 50px; */
}
.big-screen {
  display: none;
}
.group-layout .table-layout {
  width: 100%;
}
.table-layout th, .table-layout td {
  border: 1px solid #ddd;
  padding: 8px;
  text-align: left;
}
.table-layout th {
  background-color: #f2f2f2;
  color: #333;
  font-weight: bold;
  overflow: hidden;
}
/* ... */

